@@ -9,7 +9,7 @@ CPPFLAGS      = $(PICFLAGS) $(GENFLAGS) -D_REENTRANT -DFAILURE_TRIGGER
 OBJEXT        = .o
 OUTPUT_OPTION = -o "$@"
 COMPILE.cc    = $(CXX) $(CCFLAGS) $(CPPFLAGS) -c
-LDFLAGS       = -L. -L../../lib
+LDFLAGS       = -L"." -L"../../lib"
 CCC           = $(CXX)
 MAKEFILE      = Makefile.one
 DEPENDENCIES  = .depend.$(MAKEFILE)
