@@ -9,7 +9,7 @@ CPPFLAGS      = $(PICFLAGS) $(GENFLAGS) -D_REENTRANT
 OBJEXT        = .o
 OUTPUT_OPTION = -o "$@"
 COMPILE.cc    = $(CXX) $(CCFLAGS) $(CPPFLAGS) -c
-LDFLAGS       = -L. -L../lib
+LDFLAGS       = -L"." -L"../lib"
 CCC           = $(CXX)
 MAKEFILE      = Makefile.generator
 DEPENDENCIES  = .depend.$(MAKEFILE)
@@ -21,7 +21,7 @@ NUL           = /dev/null
 MKDIR         = mkdir -p
 EXEEXT        = 
 LIBPREFIX     = lib
-LDLIBS        = -lgenerator_be -ldl -lpthread
+LDLIBS        = -l"generator_be" -ldl -lpthread
 OBJS          = generator$(OBJEXT)
 GENFLAGS      = -g
 SRC           = generator.cpp
